force-app/main/default/objects/Service_Request__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Customer will be Buyer type</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>