force-app/main/default/objects/Service_Request__c/fields/Customer_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Unit</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>