force-app/main/default/objects/Service_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CreatedById,
   CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>