force-app/main/default/objects/Service_Request__c/fields/Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Type__c</fullName>
    <label>Service Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POP Verification</fullName>
            </value>
            <value>
                <fullName>Receipt Creation</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Early Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>