force-app/main/default/objects/Service_Request__c/fields/SR_Status__c.field-meta.xml
<CustomField>
    <fullName>SR_Status__c</fullName>
    <label>SR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>NMI</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>