force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SR_Status__c</columns>
    <columns>Service_Request_Type__c</columns>
    <columns>Project__c</columns>
    <columns>Customer_Unit__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>