force-app/main/default/objects/Service_Request__c/listViews/All_New_Service_Request.listView-meta.xml
<ListView>
    <fullName>All_New_Service_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SR_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All New Service Request</label>
</ListView>