force-app/main/default/objects/Service_Request__c/listViews/All_NMI.listView-meta.xml
<ListView>
    <fullName>All_NMI</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SR_Status__c</field>
        <operation>equals</operation>
        <value>NMI</value>
    </filters>
    <label>All NMI</label>
</ListView>