force-app/main/default/objects/Service_Request__c/listViews/All_Rejected.listView-meta.xml
<ListView>
    <fullName>All_Rejected</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SR_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>All Rejected</label>
</ListView>