force-app/main/default/objects/Service_Request__c/listViews/All_Under_Review.listView-meta.xml
<ListView>
    <fullName>All_Under_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SR_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>All Under Review</label>
</ListView>