force-app/main/default/objects/Service_Request__c/listViews/All_Verified.listView-meta.xml
<ListView>
    <fullName>All_Verified</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SR_Status__c</field>
        <operation>equals</operation>
        <value>Verified</value>
    </filters>
    <label>All Verified</label>
</ListView>